monitoring/grafana-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
 labels:
  name: grafana
 name: grafana
 namespace: monitoring
spec:
  replicas: 1
  template:
    metadata:
      labels:
        k8s-app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/grafana
          name: grafana-storage
      volumes:
      - name: grafana-storage
