monitoring/grafana-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: grafana.cluster
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000
