monitoring/prometheus-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: monitoring
  name: prometheus
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: prometheus.cluster
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus
          servicePort: 9090
